kubernetes/orthanc-peer/manifest.yml
#https://book.orthanc-server.com/faq/scalability.html#scalability-memory
---
apiVersion: v1
kind: Service
metadata:
  name: orthanc-postgres
  namespace: pacsaas-c0100-local
spec:
  selector:
    app: orthanc-postgres
  ports:
    - name: orthanc-postgres
      protocol: TCP
      port: 5432
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: orthanc-postgres-deployment
  namespace: pacsaas-c0100-local
  labels:
    app: orthanc-postgres
spec:
  replicas: 1
  selector:
    matchLabels:
      app: orthanc-postgres
  template:
    metadata:
      labels:
        app: orthanc-postgres
    spec:
      automountServiceAccountToken: false
      containers:
        - name: orthanc-postgres
          image: postgres:9.6
          volumeMounts:
            - name: tz-config
              mountPath: /etc/localtime
      volumes:
        - name: tz-config
          hostPath:
            path: /usr/share/zoneinfo/Europe/Zurich
---
apiVersion: v1
kind: Service
metadata:
  name: orthanc-web
  namespace: pacsaas-c0100-local
spec:
  selector:
    app: orthanc
  ports:
    - name: orthanc-web
      protocol: TCP
      port: 80
---
apiVersion: v1
kind: Service
metadata:
  name: orthanc-dicom
  namespace: pacsaas-c0100-local
spec:
  selector:
    app: orthanc
  ports:
    - name: orthanc-dicom
      protocol: TCP
      port: 4243
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: c0100-orthanc
  namespace: pacsaas-c0100-local
spec:
  rules:
  - host: c0100-peer.curapacs.ch
    http:
      paths:
      - backend:
          serviceName: orthanc-web
          servicePort: orthanc-web
        path: /
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: orthanc-deployment
  labels:
    app: orthanc
  namespace: pacsaas-c0100-local
spec:
  replicas: 1
  selector:
    matchLabels:
      app: orthanc
  template:
    metadata:
      labels:
        app: orthanc
    spec:
      automountServiceAccountToken: false
      securityContext:
        fsGroup: 101
      dnsConfig:
        options:
          - name: ndots
            value: "1"
      containers:
        - name: orthanc
          image: jodogne/orthanc-python:latest
          command: ["/bin/sh"]
          args: ["-c","rm -f /etc/orthanc/orthanc.json; /usr/local/sbin/Orthanc /etc/orthanc"]
          volumeMounts:
            - name: orthanc-http-config-vol
              mountPath: /etc/orthanc/http.json
              subPath: http.json
              readOnly: true
            - name: orthanc-postgresql-config-vol
              mountPath: /etc/orthanc/postgresql.json
              subPath: postgresql.json
              readOnly: true
            - name: orthanc-dicom-config-vol
              mountPath: /etc/orthanc/dicom.json
              subPath: dicom.json
              readOnly: true
            - name: orthanc-remote-access-config-vol
              mountPath: /etc/orthanc/remote-access.json
              subPath: remote-access.json
              readOnly: true
            - name: orthanc-python-config-vol
              mountPath: /etc/orthanc/python.json
              subPath: python.json
              readOnly: true
            - name: orthanc-python-script-vol
              mountPath: /mnt/orthanc-python
            - name: tz-config
              mountPath: /etc/localtime
      volumes:
        - name: orthanc-http-config-vol
          configMap:
            name: orthanc-http-config-cm
        - name: orthanc-postgresql-config-vol
          configMap:
            name: orthanc-postgresql-config-cm
        - name: orthanc-dicom-config-vol
          configMap:
            name: orthanc-dicom-config-cm
        - name: orthanc-remote-access-config-vol
          configMap:
            name: orthanc-remote-access-config-cm
        - name: orthanc-python-config-vol
          configMap:
            name: orthanc-python-config-cm
        - name: orthanc-python-script-vol
          emptyDir: {}
        - name: tz-config
          hostPath:
            path: /usr/share/zoneinfo/Europe/Zurich
